syntax = "proto3";

package pb;

import "user.proto"; 
 
option go_package = "github.com/dubass83/simplebank/pb";

 message GetUserRequest {
    string username = 1;
 }

 message GetUserResponse {
    User user = 1;
 }